# test_mcp

./: README.md  diagnostic.py  example_system_prompt.py  llms.py  news_search_server.py  pilot_chatbot.py  pilot_mcp_client.py  pilot_mcp_server.py  pyproject.toml  test_azure_integration.py  test_canada_new_api.py  test_components.py  test_extract.py  test_mcp_tools.py  test_mock.py  test_server.py  test_weather_api.py  weather_mcp_server.py
